--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,14 @@
 .hidden{
     display: none;
 }
+
+.result{
+    background-color: rgb(255, 255, 255);
+    border: 1px solid black;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    line-height: 5rem;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
